# skill-hub

./: .dockerignore  .gitignore  2026-07-18-001-hub-skillhub-plan.md  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  quickstart.sh
docs/dogfood-reports/: 2026-07-18-feat-skillhub-mvp-dogfood.md
docs/ideation/: 2026-07-20-chinese-language-support-ideation.html
docs/plans/: 2026-07-18-001-hub-skillhub-plan.md  2026-07-20-001-feat-remove-auth-plan.md  2026-07-20-002-feat-chinese-language-support-plan.md  2026-07-20-003-fix-date-display-format-plan.md  2026-07-20-004-feat-dockerfile-quickstart-plan.md  2026-07-20-005-feat-nginx-reverse-proxy-plan.md  2026-07-21-001-feat-skillhub-docs-skills-plan.md  2026-07-22-001-refactor-cli-install-uv-tool-plan.md  2026-07-23-001-feat-download-count-plan.md
docs/solutions/runtime-errors/: auth-token-hash-mismatch.md
skillhub/: __init__.py  config.py  database.py  main.py  models.py  parsing.py  storage.py
skillhub/api/: __init__.py  auth.py  deps.py  skills.py
skillhub/cli/: __init__.py  main.py
skillhub/cli/commands/: __init__.py  auth.py  install.py  list_cmd.py  push.py  search.py
skillhub/static/: index.html
skillhub/static/css/: style.css
skillhub/static/js/: api.js  app.js  i18n.js
skillhub/static/locales/: en.json  zh-CN.json
skills/skillhub-client/: SKILL.md
skills/skillhub-server/: SKILL.md
tests/: test_api.py  test_database.py  test_models.py  test_storage.py
