[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skillhub"
version = "0.1.0"
description = "A lightweight, self-hosted skill registry for Hermes Agent skills"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "httpx[socks]>=0.27.0",
    "pyyaml>=6.0.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.scripts]
skillhub = "skillhub.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["skillhub"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
